[tool.poetry]
name = "selene-intro"
version = "0.1.0"
description = ""
authors = ["DimaBrovko <halixfax@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selene = {version = "2.0.0a18", allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
